--- a/Dream/Dream/Views/Login/Index.cshtml
+++ b/Dream/Dream/Views/Login/Index.cshtml
@@ -12,45 +12,91 @@
 
 
     <!doctype html>
-
-    <!-- Representa la raíz de un documento HTML o XHTML. Todos los demás elementos deben ser descendientes de este elemento. -->
     <html lang="es">
-
     <head>
-
         <meta charset="utf-8">
-
-        <title> Formulario de Acceso </title>
-
+        <title>Formulario de Acceso</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
         <meta name="author" content="Videojuegos & Desarrollo">
         <meta name="description" content="Ejemplo de formulario de acceso basado en HTML5 y CSS">
-        <meta name="keywords" content="login,formulariode acceso html">
-
+        <meta name="keywords" content="login, formulariode acceso html">
         <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+        <style>
+            body {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                margin: 0;
+                background-color: #0A0D21;
+                font-family: 'Nunito', sans-serif;
+            }
 
-        <!-- Link hacia el archivo de estilos css -->
-        <link rel="stylesheet" href="css/login.css">
-        <style type="text/css">
+            form {
+                width: 300px;
+                padding: 20px;
+                background-color: #14213D;
+                border-radius: 5px;
+            }
+
+            h1 {
+                text-align: center;
+                color: #fff;
+            }
+
+            label {
+                display: block;
+                margin-bottom: 10px;
+                color: #fff;
+            }
+
+            .form-control {
+                width: 100%;
+                padding: 8px;
+                font-size: 16px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                box-sizing: border-box;
+                margin-bottom: 15px;
+            }
+
+            #msj {
+                text-align: center;
+                color: #fff;
+            }
+
+            .p-container {
+                text-align: center;
+            }
+
+                .p-container a {
+                    color: #fff;
+                    text-decoration: none;
+                    margin-right: 10px;
+                }
+
+            #go {
+                background-color: #3D5A80;
+                color: #fff;
+                border: none;
+                padding: 8px 16px;
+                font-size: 16px;
+                border-radius: 4px;
+                cursor: pointer;
+            }
         </style>
-        @Styles.Render("~/Content/Login.css")
-        <script type="text/javascript"></script>
-
     </head>
-
     <body>
         <form id="frm">
-            <h1>Employer Log in</h1>
+            <h1>Inicio de Sesion</h1>
             <div class="inset">
                 <p>
-                    <label for="email">DIRECCION DE CORREO ELECTRONICO</label>
-
+                    <label for="email">Dirección de Correo Electrónico</label>
                     @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control  ", @placeholder = "Ejemplo@gmail.com", @type = "email", required = "required", } })
                     @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
                 </p>
                 <p>
-                    <label for="password">CONTRASEÑA</label>
+                    <label for="password">Contraseña</label>
                     @Html.EditorFor(model => model.contra, new { htmlAttributes = new { @class = "form-control ", @type = "password", @placeholder = "*******", required = "required" } })
 
                     @Html.ValidationMessageFor(model => model.contra, "", new { @class = "text-danger" })
@@ -58,16 +104,17 @@
                 <p id="msj">
                     <strong>@ViewBag.Mensaje</strong>
                 </p>
-                
             </div>
             <p class="p-container">
                 @Html.ActionLink("Crear Cuenta", "EleccionRol")
                 <input type="submit" name="go" id="go" value="Ingresar">
-
             </p>
         </form>
     </body>
 </html>
+
+
+
 }
 
 
