--- a/Dream/Dream/Views/Usuarios/Create.cshtml
+++ b/Dream/Dream/Views/Usuarios/Create.cshtml
@@ -1,51 +1,122 @@
 ﻿@model Dream.Models.Usuario
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Usuario";
+    Layout = null;
 }
 
-<h2>Create</h2>
-
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <h4>Usuario</h4>
+
+<div id="frm">
+    <h4>Registrate</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.correo, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
+    <form id="frm">
+        <div class="inset">
+            <p>
+                <label for="email">Dirección de Correo Electrónico</label>
+                @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control  ", @placeholder = "Ejemplo@gmail.com", @type = "email", required = "required", } })
+                @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
+            </p>
+            <p>
+                <label for="password">Contraseña</label>
+                @Html.EditorFor(model => model.contra, new { htmlAttributes = new { @class = "form-control ", @type = "password", @placeholder = "*******", required = "required" } })
+                @Html.ValidationMessageFor(model => model.contra, "", new { @class = "text-danger" })
+            </p>
+            <div class="form-group">
+                <p class="p-container">
+                    <input type="submit" name="go" id="go" value="Registrarse">
+                </p>
+            </div>
         </div>
+
+    </form>
+
+    <div>
+        @Html.ActionLink("Back to List", "Index")
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.contra, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.contra, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.contra, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-   
-    
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </div>
 </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<style>
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background-color: #0A0D21;
+        font-family: 'Nunito', sans-serif;
+    }
+
+    form {
+        width: 300px;
+        padding: 20px;
+        background-color: #14213D;
+        border-radius: 5px;
+        position:center;
+        left:1100px;
+
+    }
+
+    h1 {
+        text-align: center;
+        color: #fff;
+    }
+
+    label {
+        display: block;
+        margin-bottom: 10px;
+        color: #fff;
+    }
+
+    .form-control {
+        width: 100%;
+        padding: 8px;
+        font-size: 16px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        margin-bottom: 15px;
+
+    }
+
+    #msj {
+        text-align: center;
+        color: #fff;
+    }
+
+    .p-container {
+        text-align: center;
+    }
+
+        .p-container a {
+            color: #fff;
+            text-decoration: none;
+            margin-right: 10px;
+        }
+
+    #go {
+        background-color: #3D5A80;
+        color: #fff;
+        border: none;
+        padding: 8px 16px;
+        font-size: 16px;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+    .inset {
+        position: center;
+        left: 500px;
+        
+    }
+</style>
