--- a/Dream/Dream/Views/HomeEmpleado/Index.cshtml
+++ b/Dream/Dream/Views/HomeEmpleado/Index.cshtml
@@ -3,12 +3,13 @@
     ViewBag.Title = "Index";
 }
 
+
 <!-- Link hacia el archivo de estilos css -->
 
-<link rel="stylesheet" href="css/HomeE.css">
+<link rel="stylesheet" href="css/HomeEmpleado.css">
 <style type="text/css">
 </style>
-@Styles.Render("~/Content/HomeE.css")
+@Styles.Render("~/Content/HomeEmpleado.css")
 <script type="text/javascript"></script>
 
 <div class="container db-social">
@@ -31,6 +32,7 @@
 
                                     <h2>BIENVENIDO</h2>
                                     <h2>Nombre: <strong>@ViewBag.Mensaje</strong></h2>
+                                    
                                 </div>
 
                             </div>
@@ -49,6 +51,7 @@
     <div class="container">
 
         <div class="section-heading title-style4 border-bottom padding-25px-bottom sm-padding-15px-bottom">
+
         </div>
 
         <div class="row mt-60">
@@ -105,7 +108,8 @@
                     <div class="widget-top-overflow text-white">
                         <img src="~/Content/img/Mercadeo.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="/HomeEmpleado/PaginaMercadeo">Ver empleos</a></li>
+
+                            <li><a href="/HomeEmpresa/PaginaMercadeo">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -131,7 +135,7 @@
                     <div class="widget-top-overflow text-white">
                         <img src="~/Content/img/programadora.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="/HomeEmpleado/PaginaTecnologia">Ver empleos</a></li>
+                            <li><a href="/HomeEmpresa/PaginaTecnologia">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -162,7 +166,7 @@
                     <div class="widget-top-overflow text-white">
                         <img src="~/Content/img/SS.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="/HomeEmpleado/PaginaRecursosHumanos">Ver empleos</a></li>
+                            <li><a href="/HomeEmpresa/PaginaRecursosHumanos">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -188,7 +192,7 @@
                     <div class="widget-top-overflow text-white">
                         <img src="~/Content/img/contador.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="/HomeEmpleado/PaginaContabilidad">Ver empleos</a></li>
+                            <li><a href="/HomeEmpresa/PaginaContabilidad">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -207,9 +211,9 @@
 
             </section>
         </div>
+
     </div>
 </div>
-
 <div class="container bootstrap snippets bootdey">
     <div class="row">
         <div class="col-md-6">
@@ -219,7 +223,7 @@
                     <div class="widget-top-overflow text-white">
                         <img src="~/Content/img/Salud.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="/HomeEmpleado/PaginaSalud">Ver empleos</a></li>
+                            <li><a href="/HomeEmpresa/PaginaSalud">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -245,7 +249,7 @@
                     <div class="widget-top-overflow text-white">
                         <img src="~/Content/img/Construccion.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="/HomeEmpleado/PaginaConstruccion">Ver empleos</a></li>
+                            <li><a href="/HomeEmpresa/PaginaConstruccion">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -264,10 +268,7 @@
 
             </section>
         </div>
+
     </div>
 </div>
-
-
-
-
 
