--- a/Dream/Dream/Views/Curriculu/Index.cshtml
+++ b/Dream/Dream/Views/Curriculu/Index.cshtml
@@ -1,143 +1,201 @@
 ﻿@model IEnumerable<Dream.Models.Curriculum>
 
 @{
-    Layout = null;
+    ViewBag.Title = "Index";
 }
 
-<!DOCTYPE html>
+<!-- Link hacia el archivo de estilos css -->
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.apellido)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.edad)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.genero)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.direccion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.telefono)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.dui)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.licencia)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.nivelAcademico)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.historialAcademico)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.referenciaPers)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.experienciaLab)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.descripcion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.correoOpc)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.segundoIdioma)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.imagen)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.estado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Usuario.correo)
-            </th>
-            <th></th>
-        </tr>
-    
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.apellido)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.edad)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.genero)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.direccion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.telefono)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.dui)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.licencia)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.nivelAcademico)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.historialAcademico)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.referenciaPers)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.experienciaLab)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.correoOpc)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.segundoIdioma)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.imagen)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.estado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario.correo)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.idCurriculum }) |
-                @Html.ActionLink("Details", "Details", new { id=item.idCurriculum }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.idCurriculum })
-            </td>
-        </tr>
-    }
-    
-    </table>
-</body>
-</html>
+<link rel="stylesheet" href="css/Curri.css">
+<style type="text/css">
+</style>
+@Styles.Render("~/Content/Curri.css")
+<script type="text/javascript"></script>
+
+
+<a href="https://icons8.com/icon/kDoeg22e5jUY/male-user"></a> <a href="https://icons8.com"></a>
+
+<div class="container">
+
+
+    <section>
+        <div class="pricing-box mt-4" ">
+            <div class="card mt-5 border-5 pt-2 active pb-0 px-3 ">
+                <div class="card-body ">
+                    <div class="row">
+                        <div class="col-12 ">
+                            <h4 class="card-title "><b>Perfil de Usuario</b></h4>
+
+                        </div>
+                        <div class="col">
+                            <h6 class="card-subtitle mb-2 text-muted">
+                                <p class="card-text text-muted small ">
+
+                                    <img width="48" height="48" src="https://img.icons8.com/fluency/48/user-male-circle.png" alt="user-male-circle" />
+
+                                </p>
+                            </h6>
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+
+
+
+    <div class="main-body">
+
+
+        <div class="row gutters-sm">
+
+            @foreach (var item in Model)
+            {
+
+                <div class="col-md-4 mb-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex flex-column align-items-center text-center">
+                                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                                <div class="mt-3">
+                                    <h4>  @Html.DisplayFor(modelItem => item.nombre)</h4>
+                                    <p class="text-secondary mb-1">  @Html.DisplayFor(modelItem => item.nivelAcademico)</p>
+                                    <p class="text-muted font-size-sm"> @Html.DisplayFor(modelItem => item.direccion)</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mt-3">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Decripcion personal</p>
+                                <span class="text-secondary"> @Html.DisplayFor(modelItem => item.descripcion)</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Correo:</p>
+                                <span class="text-secondary">  @Html.DisplayFor(modelItem => item.Usuario.correo)</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Segundo Idioma:</p>
+                                <span class="text-secondary">@Html.DisplayFor(modelItem => item.segundoIdioma)</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Correo Secundario:</p>
+                                <span class="text-secondary"> @Html.DisplayFor(modelItem => item.correoOpc)</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Licencia</p>
+                                <span class="text-secondary">   @Html.DisplayFor(modelItem => item.licencia)</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Telefono</p>
+                                <span class="text-secondary">@Html.DisplayFor(modelItem => item.telefono)</span>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div><div class="col-md-8">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Nombre</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.nombre)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Apellidos</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.apellido)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Edad</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.edad)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Genero</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.genero)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Numero de Dui</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.dui)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Historial Academico</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.historialAcademico)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Experiencia Laboral</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.experienciaLab)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Feferencias </h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.referenciaPers)
+                                </div>
+                            </div>
+                            <hr>
+
+
+                        </div>
+
+
+
+                    </div>
+
+
+
+
+
+                </div>
+
+
+
+
+
+            }
+
+        </div>
+
+    </div>
+
+</div>
+
