--- a/Dream/Dream/Views/OfertaEmpleos/Create.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Create.cshtml
@@ -95,13 +95,13 @@
     </div>
 
 
-    @*<div class="form-group">
+    <div class="form-group">
         @Html.LabelFor(model => model.idDatosEmpresa, "idDatosEmpresa", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("idDatosEmpresa", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.idDatosEmpresa, "", new { @class = "text-danger" })
         </div>
-    </div>*@
+    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
